Fixed input field bug on safari

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -13,6 +13,7 @@ html {
 input{
 	cursor: text;
 	border:0;
+	@include select;
 }
 input:focus{
 	border:0;
